# omnivoice-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.PT_BR.md  README.RU.md  README.md  THIRD_PARTY_LICENSES.md  package.nix  ref_text.txt  roadmap.md
.github/actions/get-tag-name/: action.yml
.github/actions/linux-setup-cuda/: action.yml
.github/actions/windows-setup-cuda/: action.yml
.github/workflows/: ci.yml  release.yml
crates/omnivoice-cli/: Cargo.toml
crates/omnivoice-cli/src/: main.rs
crates/omnivoice-cli/tests/: artifacts_validate.rs  phase10_cli_cuda.rs  phase10_cli_metal.rs
crates/omnivoice-infer/: Cargo.toml
crates/omnivoice-infer/assets/: omnivoice.artifacts.json
crates/omnivoice-infer/src/: artifacts.rs  asr.rs  audio_input.rs  audio_tokenizer.rs  audio_tokenizer_dac.rs  audio_tokenizer_hubert.rs  contracts.rs  error.rs  gpu_lock.rs  lib.rs  model_source.rs  paths.rs  pipeline.rs  postprocess.rs  reference_prompt.rs  runtime.rs  stage0_loop.rs  stage0_model.rs  stage0_qwen3.rs  stage1_decoder.rs  stage1_model.rs
crates/omnivoice-infer/src/frontend/: duration.rs  language.rs  mod.rs  text.rs  voice_design.rs
crates/omnivoice-infer/tests/: live_infer_gpu.rs  live_infer_metal.rs  model_source_resolution.rs  phase10_cuda_acceptance.rs  phase10_metal_acceptance.rs  phase1_contracts.rs  phase2_artifacts.rs  phase3_scaffold.rs  phase4_frontend.rs  phase5_stage1_decode.rs  phase5_stage1_decode_metal.rs  phase6_stage0.rs  phase7_stage0_parity.rs  phase7_stage0_parity_metal.rs  phase7_stage1_parity.rs  phase7_stage1_parity_metal.rs  phase8_gpu_contracts.rs  phase8_gpu_contracts_metal.rs  phase8_helper_contracts.rs  phase_status.rs
crates/omnivoice-infer/tests/support/: mod.rs
crates/omnivoice-server/: Cargo.toml
crates/omnivoice-server/src/: args.rs  audio.rs  error.rs  main.rs  openai.rs  runtime.rs  server.rs
crates/omnivoice-server/tests/: openai_server.rs
docs/: README.md  cli-and-server.md
docs/contracts/phase10/: frontend.md  reference-prompt.md  stage0.md  stage1-postprocess.md
docs/contracts/phase8/: frontend.md  reference-prompt.md  stage0.md  stage1-postprocess.md
docs/contracts/phase9/: frontend.md  reference-prompt.md  stage0.md  stage1-postprocess.md
tools/python_reference/: README.md  cases.json  export_reference.py  freeze_phase0.py  freeze_phase6_stage0.py  freeze_phase7_stage0_cuda_f32.py  test_phase0.py  validate_reference.py
