[workspace]
members = [
    "crates/omnivoice-infer",
    "crates/omnivoice-cli",
    "crates/omnivoice-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
authors = ["FerrisMind"]

[workspace.dependencies]
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
fslock = "0.2.1"
half = "2.4.1"
hound = "3.5.1"
hf-hub = "0.4.3"
regex = "1.12.2"
safetensors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11.1"
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
thiserror = "2.0"
tokenizers = "0.22.2"
mistralrs-audio = "0.8.1"
mistralrs-quant = "0.8.1"
unicode-general-category = "1.1.0"
rand = "0.9.2"

[profile.release]
codegen-units = 1
debug = "line-tables-only"
lto = "thin"

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3
