[package]
name = "omnivoice-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
omnivoice-infer = { path = "../omnivoice-infer" }
serde_json.workspace = true

[features]
default = []
cuda = ["omnivoice-infer/cuda"]
metal = ["omnivoice-infer/metal"]
