[package]
name = "omnivoice-infer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
fslock.workspace = true
half.workspace = true
hound.workspace = true
hf-hub.workspace = true
regex.workspace = true
safetensors.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
symphonia.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
mistralrs-audio = { workspace = true, optional = true }
mistralrs-quant.workspace = true
unicode-general-category.workspace = true

[features]
default = []
audio-helper = ["dep:mistralrs-audio"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
phase6-tests = []
